--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3001
 DATABASE_URL="postgresql://postgres:@localhost:5432/emobireports?schema=public"
 JWT_SECRET='123abc'
+FRONTEND_URL='http://localhost:3000'
