--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn --ignore-watch node_modules --transpile-only ./src/index.ts",
     "workers": "ts-node src/worker_server.ts",
     "test": "jest --detectOpenHandles --config jest.config.ts",
+    "cron": "ts-node src/cron_server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "ioredis": "^5.6.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "prisma": "^6.4.1",
     "uuid": "^11.1.0"
   },
@@ -36,6 +38,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
