--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "prisma": "^6.4.1",
+    "supertest": "^7.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
