--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3001
 DATABASE_URL="postgresql://postgres:@localhost:5432/emobireports?schema=public"
 JWT_SECRET='123abc'
 FRONTEND_URL='http://localhost:3000'
+CURRENT_VERSION=0.0.1
