--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "concurrently": "^9.1.2",
@@ -28,6 +30,8 @@
     "node-cron": "^3.0.3",
     "prisma": "^6.4.1",
     "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
